--- a/index.html
+++ b/index.html
@@ -21,14 +21,26 @@
 
     <header class="view-header">
       <div class="view-header__left">
-        <a href="/">
+        <a href="/" class="js-open-nav">
           <i class="ri-menu-line"></i>
         </a>
       </div>
 
       <div class="view-header__featured">
         <a class="site-logo" href="">
-          <img src="/build/images/Ajua-logo.svg" />
+          <svg width="83" height="26" viewBox="0 0 83 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M0 5.27072C0 2.35978 2.35978 0 5.27072 0H9.4873V9.4873C9.4873 12.3982 7.12752 14.758 4.21658 14.758H0V5.27072ZM11.5956 0H17.9204C23.7423 0 28.4619 4.71957 28.4619 10.5414V25.2995H22.137C16.3152 25.2995 11.5956 20.5799 11.5956 14.758V0ZM5.27078 25.2995C7.59953 25.2995 9.48736 23.4116 9.48736 21.0829C9.48736 18.7541 7.59953 16.8663 5.27078 16.8663C2.94203 16.8663 1.0542 18.7541 1.0542 21.0829C1.0542 23.4116 2.94203 25.2995 5.27078 25.2995Z" fill="url(#paint0_linear_12_1034)"/>
+            <path d="M45.5624 16.7925L46.2834 18.9746H49.1296L44.8034 6.31854H41.5587L37.1946 18.9746H39.9459L40.7049 16.7925H45.5624ZM44.8793 14.6674H41.369L43.1336 9.43038L44.8793 14.6674Z" fill="#15171A"/>
+            <path d="M56.4418 6.31854H50.8633V8.4437H53.8423V13.8515C53.8423 15.692 53.5766 16.3182 52.6469 16.6977C52.2484 16.8494 51.9638 16.8874 51.2238 16.8874C51.1479 16.8874 51.034 16.8874 50.8633 16.8684V19.1644C52.552 19.1644 53.4248 19.0505 54.1648 18.7279C55.7777 18.0448 56.4418 16.8115 56.4418 14.4776V6.31854Z" fill="#15171A"/>
+            <path d="M62.0353 6.31854H59.4358V13.6427C59.4358 15.5971 59.7584 16.7356 60.5743 17.6464C61.4661 18.6331 62.8702 19.2213 64.4071 19.2213C65.8871 19.2213 67.2154 18.69 68.0692 17.7413C68.9231 16.8115 69.3216 15.5023 69.3216 13.6427V6.31854H66.7031V13.7186C66.7031 14.8951 66.5892 15.4453 66.2097 15.9576C65.8302 16.4889 65.0902 16.8305 64.3692 16.8305C63.7051 16.8305 62.984 16.5079 62.6045 16.0525C62.1871 15.5592 62.0353 14.8951 62.0353 13.7376V6.31854Z" fill="#15171A"/>
+            <path d="M79.4328 16.7925L80.1538 18.9746H83L78.6738 6.31854H75.4292L71.065 18.9746H73.8163L74.5753 16.7925H79.4328ZM78.7497 14.6674H75.2394L77.004 9.43038L78.7497 14.6674Z" fill="#15171A"/>
+            <defs>
+            <linearGradient id="paint0_linear_12_1034" x1="1.18591" y1="12.6497" x2="28.4619" y2="12.6497" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4171F3"/>
+            <stop offset="1" stop-color="#922DE2"/>
+            </linearGradient>
+            </defs>
+          </svg>
           <h2 class="sr-only">Ajua</h2>
         </a>
       </div>
@@ -38,6 +50,40 @@
           <i class="ri-search-2-line"></i>
         </search-trigger>
       </div>
+
+      <nav class="navigation-drawer">
+        <div>
+          <ul>
+            <li>
+              <a href="">Home</a>
+            </li>
+            <li>
+              <a href="">For Business</a>
+            </li>
+            <li>
+              <a href="">About</a>
+            </li>
+            <li>
+              <a href="">Suggest a Business</a>
+            </li>
+            <li>
+              <a href="">Contact</a>
+            </li>
+          </ul>
+          <hr />
+          <ul>
+            <li>
+              <a href="">Terms</a>
+            </li>
+            <li>
+              <a href="">Privacy</a>
+            </li>
+            <li>
+              <a href="">Cookies</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
     </header>
 
@@ -382,11 +428,17 @@
   <!-- <script src="./build/main.js"></script> -->
 
   <script>
-    var $ = jQuery;
-    var st = $('.js-search');
+    const $ = jQuery;
+    const st = $('.js-search');
     st.click(function(e){
       e.preventDefault();
       $('body').toggleClass('search-is-active');
+    });
+
+    const nav = $('.js-open-nav');
+    nav.click(function(e){
+      e.preventDefault();
+      $('body').toggleClass('nav-is-active');
     });
 
     $('business-preview').click(function(){
