home desktop complete

--- a/business.html
+++ b/business.html
@@ -216,7 +216,7 @@
           </review-review>
         </review>
 
-        <a class="btn-outline mt-3" href="">Show all <span>XXX</span> reviews</a>
+        <a class="btn-outline mt-3" href="/all-reviews.html">Show all <span>XXX</span> reviews</a>
       </div>
 
 
