home section add

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </div>
     </div>
 
-    <div class="py-4 py-md-6 wrapper">
+    <div class="py-4 py-md-0 pb-md-6 wrapper">
       <h3 class="h6">Top Rated businesses</h3>
 
       <business-list class="slider slider--business">
@@ -388,6 +388,33 @@
       </div>
     </div>
 
+    <hr />
+
+    <div class="wrapper-full py-7">
+      <div class="wrapper d-md-flex">
+        <div class="col-12 col-md-4 mb-6 mb-md-0 pr-md-4">
+          <div class="has-accent-top">
+            <h4>Use Ajua at your business</h4>
+            <p>Everything you need to build and grow your business.</p>
+            <a class="link-plain mt-2" href="">Learn more</a>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 mb-6 mb-md-0 pr-md-4">
+          <div class="has-accent-top">
+            <h4>Download the Ajua merchant app</h4>
+            <p>Manage your business from anhywhere at your fingertips.</p>
+            <a class="link-plain mt-2" href="">Download it now</a>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 pr-md-4">
+          <div class="has-accent-top">
+            <h4>Request a new business</h4>
+            <p>Have a favorite business but don’t see it? Let us know.</p>
+            <a class="link-plain mt-2" href="">Suggest a business</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 
   <footer class="site-footer">
