--- a/business.html
+++ b/business.html
@@ -19,46 +19,49 @@
   <a class="sr-only" href="#content">skip to content</a>
   <main id="content" class="main page-content" aria-label="Content">
 
-    <header class="view-header">
-      <div class="view-header__left">
-        <a href="/">
-          <i class="ri-arrow-left-s-line"></i>
-        </a>
-      </div>
-      <div class="view-header__featured">
-        <p>Mchana Coffee Shop</p>
-      </div>
-      <search-trigger class="view-header__right">
-        <i class="ri-search-2-line"></i>
-      </search-trigger>
-    </header>
-
-    <header class="view-header-lg">
-      <div class="view-header-lg__inner">
-        <div class="view-header-lg__left">
-          <a class="site-logo" href="">
-            <img src="./build/images/Ajua-logo.svg" alt="Ajua" />
-            <h2 class="sr-only">Ajua</h2>
+    <header class="site-header">
+      <div class="view-header">
+        <div class="view-header__left">
+          <a href="/">
+            <i class="ri-arrow-left-s-line"></i>
           </a>
-          <form class="view-header-lg__search js-open-quick-search">
-            <i class="ri-search-2-line"></i>
-            <input class="js-open-quick-search" type="text" placeholder="Start typing"/>
-          </form>
         </div>
+        <div class="view-header__featured">
+          <p>Mchana Coffee Shop</p>
+        </div>
+        <search-trigger class="view-header__right">
+          <i class="ri-search-2-line"></i>
+        </search-trigger>
+      </div>
 
-        <ul class="view-header-lg__nav">
-          <li>
-            <a href="">Home</a>
-          </li>
-          <li>
-            <a href="">For Business</a>
-          </li>
-          <li>
-            <a href="">About</a>
-          </li>
-        </ul>
+      <div class="view-header-lg">
+        <div class="view-header-lg__inner">
+          <div class="view-header-lg__left">
+            <a class="site-logo" href="">
+              <img src="./build/images/Ajua-logo.svg" alt="Ajua" />
+              <h2 class="sr-only">Ajua</h2>
+            </a>
+            <form class="view-header-lg__search js-open-quick-search">
+              <i class="ri-search-2-line"></i>
+              <input class="js-open-quick-search" type="text" placeholder="Start typing"/>
+            </form>
+          </div>
+
+          <ul class="view-header-lg__nav">
+            <li>
+              <a href="">Home</a>
+            </li>
+            <li>
+              <a href="">For Business</a>
+            </li>
+            <li>
+              <a href="">About</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
+
 
     <business>
       <header class="business__header">
