--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="shortcut icon" type="image/ico" href="%PUBLIC_URL%/favicon.png" />
+  	<link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+  	<link rel="icon" href="%PUBLIC_URL%/android-favicon.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ajua</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
